// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds author feed views fetches full author feeds for self (sorted, minimal viewer state). 1`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(2)",
            "uri": "record(2)",
          },
          "root": Object {
            "cid": "cids(1)",
            "uri": "record(1)",
          },
        },
        "text": "thanks bob",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "did": "user(1)",
          "displayName": "bobby",
          "handle": "bob.test",
          "viewer": Object {
            "followedBy": "record(4)",
            "following": "record(3)",
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "embed": Object {
          "$type": "app.bsky.embed.images#view",
          "value": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(3)",
                  },
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(1)",
              "uri": "record(1)",
            },
            "root": Object {
              "cid": "cids(1)",
              "uri": "record(1)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(2)",
        "viewer": Object {},
      },
      "root": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(1)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "likeCount": 3,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "uri": "record(1)",
        "viewer": Object {},
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(4)",
      "embed": Object {
        "$type": "app.bsky.embed.record#view",
        "value": Object {
          "$type": "app.bsky.embed.record#viewRecord",
          "author": Object {
            "did": "user(2)",
            "handle": "dan.test",
            "viewer": Object {
              "following": "record(7)",
              "muted": false,
            },
          },
          "cid": "cids(5)",
          "embeds": Array [
            Object {
              "$type": "app.bsky.embed.record#view",
              "value": Object {
                "$type": "app.bsky.embed.record#viewRecord",
                "author": Object {
                  "did": "user(3)",
                  "handle": "carol.test",
                  "viewer": Object {
                    "followedBy": "record(10)",
                    "following": "record(9)",
                    "muted": false,
                  },
                },
                "cid": "cids(6)",
                "indexedAt": "1970-01-01T00:00:00.000Z",
                "record": Object {
                  "$type": "app.bsky.feed.post",
                  "createdAt": "1970-01-01T00:00:00.000Z",
                  "embed": Object {
                    "$type": "app.bsky.embed.images",
                    "images": Array [
                      Object {
                        "alt": "tests/image/fixtures/key-landscape-small.jpg",
                        "image": Object {
                          "$type": "blob",
                          "mimeType": "image/jpeg",
                          "ref": Object {
                            "$link": "cids(3)",
                          },
                        },
                      },
                      Object {
                        "alt": "tests/image/fixtures/key-alt.jpg",
                        "image": Object {
                          "$type": "blob",
                          "mimeType": "image/jpeg",
                          "ref": Object {
                            "$link": "cids(7)",
                          },
                        },
                      },
                    ],
                  },
                  "text": "hi im carol",
                },
                "uri": "record(8)",
              },
            },
          ],
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "embed": Object {
              "$type": "app.bsky.embed.record",
              "record": Object {
                "cid": "cids(6)",
                "uri": "record(8)",
              },
            },
            "facets": Array [
              Object {
                "index": Object {
                  "end": 18,
                  "start": 0,
                },
                "value": Object {
                  "$type": "app.bsky.richtext.facet#mention",
                  "did": "user(0)",
                },
              },
            ],
            "text": "@alice.bluesky.xyz is the best",
          },
          "uri": "record(6)",
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 2,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.record",
          "record": Object {
            "cid": "cids(5)",
            "uri": "record(6)",
          },
        },
        "text": "yoohoo",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(5)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(1)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 3,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "uri": "record(1)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(8)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "hey there",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(11)",
      "viewer": Object {},
    },
  },
]
`;

exports[`pds author feed views fetches full author feeds for self (sorted, minimal viewer state). 2`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(0)",
        "displayName": "bobby",
        "handle": "bob.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(0)",
      "embed": Object {
        "$type": "app.bsky.embed.images#view",
        "value": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": Object {
                "$type": "blob",
                "mimeType": "image/jpeg",
                "ref": Object {
                  "$link": "cids(1)",
                },
              },
            },
          ],
        },
        "reply": Object {
          "parent": Object {
            "cid": "cids(2)",
            "uri": "record(1)",
          },
          "root": Object {
            "cid": "cids(2)",
            "uri": "record(1)",
          },
        },
        "text": "hear that",
      },
      "replyCount": 1,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "followedBy": "record(3)",
            "following": "record(2)",
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "likeCount": 3,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "uri": "record(1)",
        "viewer": Object {
          "like": "record(4)",
        },
      },
      "root": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "followedBy": "record(3)",
            "following": "record(2)",
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "likeCount": 3,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "uri": "record(1)",
        "viewer": Object {
          "like": "record(4)",
        },
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(0)",
        "displayName": "bobby",
        "handle": "bob.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(3)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "bobby boy here",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(5)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(0)",
        "displayName": "bobby",
        "handle": "bob.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(4)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "bob back at it again!",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(6)",
      "viewer": Object {},
    },
  },
]
`;

exports[`pds author feed views fetches full author feeds for self (sorted, minimal viewer state). 3`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "did": "user(0)",
        "handle": "dan.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(0)",
      "embed": Object {
        "$type": "app.bsky.embed.record#view",
        "value": Object {
          "$type": "app.bsky.embed.record#viewRecord",
          "author": Object {
            "did": "user(2)",
            "handle": "carol.test",
            "viewer": Object {
              "muted": false,
            },
          },
          "cid": "cids(1)",
          "embeds": Array [
            Object {
              "$type": "app.bsky.embed.images#view",
              "value": Array [
                Object {
                  "alt": "tests/image/fixtures/key-landscape-small.jpg",
                  "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
                  "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
                },
                Object {
                  "alt": "tests/image/fixtures/key-alt.jpg",
                  "fullsize": "https://pds.public.url/image/xC2No-8rKVDIwIMmCiEBm9EiGLDBBOpf36PHoGf-GDw/rs:fit:2000:2000:1:0/plain/bafkreifdklbbcdsyanjz3oqe5pf2omuq5ansthokxlbleagg3eenx62h7e@jpeg",
                  "thumb": "https://pds.public.url/image/g7yazUpNwN8LKumZ2Zmn_ptQbtMLs1Pti5-GDn7H8_8/rs:fit:1000:1000:1:0/plain/bafkreifdklbbcdsyanjz3oqe5pf2omuq5ansthokxlbleagg3eenx62h7e@jpeg",
                },
              ],
            },
          ],
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "embed": Object {
              "$type": "app.bsky.embed.images",
              "images": Array [
                Object {
                  "alt": "tests/image/fixtures/key-landscape-small.jpg",
                  "image": Object {
                    "$type": "blob",
                    "mimeType": "image/jpeg",
                    "ref": Object {
                      "$link": "cids(2)",
                    },
                  },
                },
                Object {
                  "alt": "tests/image/fixtures/key-alt.jpg",
                  "image": Object {
                    "$type": "blob",
                    "mimeType": "image/jpeg",
                    "ref": Object {
                      "$link": "cids(3)",
                    },
                  },
                },
              ],
            },
            "text": "hi im carol",
          },
          "uri": "record(1)",
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.record",
          "record": Object {
            "cid": "cids(1)",
            "uri": "record(1)",
          },
        },
        "facets": Array [
          Object {
            "index": Object {
              "end": 18,
              "start": 0,
            },
            "value": Object {
              "$type": "app.bsky.richtext.facet#mention",
              "did": "user(1)",
            },
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "replyCount": 0,
      "repostCount": 1,
      "uri": "record(0)",
      "viewer": Object {
        "repost": "record(2)",
      },
    },
    "reason": Object {
      "$type": "app.bsky.feed.feedViewPost#reasonRepost",
      "by": Object {
        "did": "user(2)",
        "handle": "carol.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "did": "user(2)",
        "handle": "carol.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(4)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(5)",
            "uri": "record(4)",
          },
          "root": Object {
            "cid": "cids(5)",
            "uri": "record(4)",
          },
        },
        "text": "of course",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(3)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "followedBy": "record(6)",
            "following": "record(5)",
            "muted": false,
          },
        },
        "cid": "cids(5)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "likeCount": 3,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "uri": "record(4)",
        "viewer": Object {
          "like": "record(7)",
        },
      },
      "root": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "followedBy": "record(6)",
            "following": "record(5)",
            "muted": false,
          },
        },
        "cid": "cids(5)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "likeCount": 3,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "uri": "record(4)",
        "viewer": Object {
          "like": "record(7)",
        },
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "did": "user(2)",
        "handle": "carol.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(1)",
      "embed": Object {
        "$type": "app.bsky.embed.images#view",
        "value": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
          },
          Object {
            "alt": "tests/image/fixtures/key-alt.jpg",
            "fullsize": "https://pds.public.url/image/xC2No-8rKVDIwIMmCiEBm9EiGLDBBOpf36PHoGf-GDw/rs:fit:2000:2000:1:0/plain/bafkreifdklbbcdsyanjz3oqe5pf2omuq5ansthokxlbleagg3eenx62h7e@jpeg",
            "thumb": "https://pds.public.url/image/g7yazUpNwN8LKumZ2Zmn_ptQbtMLs1Pti5-GDn7H8_8/rs:fit:1000:1000:1:0/plain/bafkreifdklbbcdsyanjz3oqe5pf2omuq5ansthokxlbleagg3eenx62h7e@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 2,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": Object {
                "$type": "blob",
                "mimeType": "image/jpeg",
                "ref": Object {
                  "$link": "cids(2)",
                },
              },
            },
            Object {
              "alt": "tests/image/fixtures/key-alt.jpg",
              "image": Object {
                "$type": "blob",
                "mimeType": "image/jpeg",
                "ref": Object {
                  "$link": "cids(3)",
                },
              },
            },
          ],
        },
        "text": "hi im carol",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(1)",
      "viewer": Object {},
    },
  },
]
`;

exports[`pds author feed views fetches full author feeds for self (sorted, minimal viewer state). 4`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 3,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "uri": "record(0)",
      "viewer": Object {
        "like": "record(3)",
        "repost": "record(2)",
      },
    },
    "reason": Object {
      "$type": "app.bsky.feed.feedViewPost#reasonRepost",
      "by": Object {
        "did": "user(1)",
        "handle": "dan.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "did": "user(1)",
        "handle": "dan.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(1)",
      "embed": Object {
        "$type": "app.bsky.embed.record#view",
        "value": Object {
          "$type": "app.bsky.embed.record#viewRecord",
          "author": Object {
            "did": "user(2)",
            "handle": "carol.test",
            "viewer": Object {
              "muted": false,
            },
          },
          "cid": "cids(2)",
          "embeds": Array [
            Object {
              "$type": "app.bsky.embed.images#view",
              "value": Array [
                Object {
                  "alt": "tests/image/fixtures/key-landscape-small.jpg",
                  "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
                  "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
                },
                Object {
                  "alt": "tests/image/fixtures/key-alt.jpg",
                  "fullsize": "https://pds.public.url/image/xC2No-8rKVDIwIMmCiEBm9EiGLDBBOpf36PHoGf-GDw/rs:fit:2000:2000:1:0/plain/bafkreifdklbbcdsyanjz3oqe5pf2omuq5ansthokxlbleagg3eenx62h7e@jpeg",
                  "thumb": "https://pds.public.url/image/g7yazUpNwN8LKumZ2Zmn_ptQbtMLs1Pti5-GDn7H8_8/rs:fit:1000:1000:1:0/plain/bafkreifdklbbcdsyanjz3oqe5pf2omuq5ansthokxlbleagg3eenx62h7e@jpeg",
                },
              ],
            },
          ],
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "embed": Object {
              "$type": "app.bsky.embed.images",
              "images": Array [
                Object {
                  "alt": "tests/image/fixtures/key-landscape-small.jpg",
                  "image": Object {
                    "$type": "blob",
                    "mimeType": "image/jpeg",
                    "ref": Object {
                      "$link": "cids(3)",
                    },
                  },
                },
                Object {
                  "alt": "tests/image/fixtures/key-alt.jpg",
                  "image": Object {
                    "$type": "blob",
                    "mimeType": "image/jpeg",
                    "ref": Object {
                      "$link": "cids(4)",
                    },
                  },
                },
              ],
            },
            "text": "hi im carol",
          },
          "uri": "record(5)",
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.record",
          "record": Object {
            "cid": "cids(2)",
            "uri": "record(5)",
          },
        },
        "facets": Array [
          Object {
            "index": Object {
              "end": 18,
              "start": 0,
            },
            "value": Object {
              "$type": "app.bsky.richtext.facet#mention",
              "did": "user(0)",
            },
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "replyCount": 0,
      "repostCount": 1,
      "uri": "record(4)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "did": "user(1)",
        "handle": "dan.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(5)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "dan here!",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(6)",
      "viewer": Object {},
    },
  },
]
`;

exports[`pds author feed views omits reposts from muted users. 1`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "did": "user(0)",
        "handle": "dan.test",
        "viewer": Object {
          "followedBy": "record(1)",
          "muted": true,
        },
      },
      "cid": "cids(0)",
      "embed": Object {
        "$type": "app.bsky.embed.record#view",
        "value": Object {
          "$type": "app.bsky.embed.record#viewRecord",
          "author": Object {
            "did": "user(2)",
            "handle": "carol.test",
            "viewer": Object {
              "following": "record(3)",
              "muted": false,
            },
          },
          "cid": "cids(1)",
          "embeds": Array [
            Object {
              "$type": "app.bsky.embed.images#view",
              "value": Array [
                Object {
                  "alt": "tests/image/fixtures/key-landscape-small.jpg",
                  "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
                  "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
                },
                Object {
                  "alt": "tests/image/fixtures/key-alt.jpg",
                  "fullsize": "https://pds.public.url/image/xC2No-8rKVDIwIMmCiEBm9EiGLDBBOpf36PHoGf-GDw/rs:fit:2000:2000:1:0/plain/bafkreifdklbbcdsyanjz3oqe5pf2omuq5ansthokxlbleagg3eenx62h7e@jpeg",
                  "thumb": "https://pds.public.url/image/g7yazUpNwN8LKumZ2Zmn_ptQbtMLs1Pti5-GDn7H8_8/rs:fit:1000:1000:1:0/plain/bafkreifdklbbcdsyanjz3oqe5pf2omuq5ansthokxlbleagg3eenx62h7e@jpeg",
                },
              ],
            },
          ],
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "embed": Object {
              "$type": "app.bsky.embed.images",
              "images": Array [
                Object {
                  "alt": "tests/image/fixtures/key-landscape-small.jpg",
                  "image": Object {
                    "$type": "blob",
                    "mimeType": "image/jpeg",
                    "ref": Object {
                      "$link": "cids(2)",
                    },
                  },
                },
                Object {
                  "alt": "tests/image/fixtures/key-alt.jpg",
                  "image": Object {
                    "$type": "blob",
                    "mimeType": "image/jpeg",
                    "ref": Object {
                      "$link": "cids(3)",
                    },
                  },
                },
              ],
            },
            "text": "hi im carol",
          },
          "uri": "record(2)",
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.record",
          "record": Object {
            "cid": "cids(1)",
            "uri": "record(2)",
          },
        },
        "facets": Array [
          Object {
            "index": Object {
              "end": 18,
              "start": 0,
            },
            "value": Object {
              "$type": "app.bsky.richtext.facet#mention",
              "did": "user(1)",
            },
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "replyCount": 0,
      "repostCount": 1,
      "uri": "record(0)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "did": "user(0)",
        "handle": "dan.test",
        "viewer": Object {
          "followedBy": "record(1)",
          "muted": true,
        },
      },
      "cid": "cids(4)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "dan here!",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(4)",
      "viewer": Object {},
    },
  },
]
`;

exports[`pds author feed views reflects fetching user's state in the feed. 1`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(2)",
            "uri": "record(4)",
          },
          "root": Object {
            "cid": "cids(1)",
            "uri": "record(3)",
          },
        },
        "text": "thanks bob",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "did": "user(1)",
          "displayName": "bobby",
          "handle": "bob.test",
          "viewer": Object {
            "followedBy": "record(6)",
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "embed": Object {
          "$type": "app.bsky.embed.images#view",
          "value": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(3)",
                  },
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(1)",
              "uri": "record(3)",
            },
            "root": Object {
              "cid": "cids(1)",
              "uri": "record(3)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(4)",
        "viewer": Object {},
      },
      "root": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "followedBy": "record(2)",
            "following": "record(1)",
            "muted": false,
          },
        },
        "cid": "cids(1)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "likeCount": 3,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "uri": "record(3)",
        "viewer": Object {
          "like": "record(5)",
        },
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(4)",
      "embed": Object {
        "$type": "app.bsky.embed.record#view",
        "value": Object {
          "$type": "app.bsky.embed.record#viewRecord",
          "author": Object {
            "did": "user(2)",
            "handle": "dan.test",
            "viewer": Object {
              "muted": false,
            },
          },
          "cid": "cids(5)",
          "embeds": Array [
            Object {
              "$type": "app.bsky.embed.record#view",
              "value": Object {
                "$type": "app.bsky.embed.record#viewRecord",
                "author": Object {
                  "did": "user(3)",
                  "handle": "carol.test",
                  "viewer": Object {
                    "muted": false,
                  },
                },
                "cid": "cids(6)",
                "indexedAt": "1970-01-01T00:00:00.000Z",
                "record": Object {
                  "$type": "app.bsky.feed.post",
                  "createdAt": "1970-01-01T00:00:00.000Z",
                  "embed": Object {
                    "$type": "app.bsky.embed.images",
                    "images": Array [
                      Object {
                        "alt": "tests/image/fixtures/key-landscape-small.jpg",
                        "image": Object {
                          "$type": "blob",
                          "mimeType": "image/jpeg",
                          "ref": Object {
                            "$link": "cids(3)",
                          },
                        },
                      },
                      Object {
                        "alt": "tests/image/fixtures/key-alt.jpg",
                        "image": Object {
                          "$type": "blob",
                          "mimeType": "image/jpeg",
                          "ref": Object {
                            "$link": "cids(7)",
                          },
                        },
                      },
                    ],
                  },
                  "text": "hi im carol",
                },
                "uri": "record(9)",
              },
            },
          ],
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "embed": Object {
              "$type": "app.bsky.embed.record",
              "record": Object {
                "cid": "cids(6)",
                "uri": "record(9)",
              },
            },
            "facets": Array [
              Object {
                "index": Object {
                  "end": 18,
                  "start": 0,
                },
                "value": Object {
                  "$type": "app.bsky.richtext.facet#mention",
                  "did": "user(0)",
                },
              },
            ],
            "text": "@alice.bluesky.xyz is the best",
          },
          "uri": "record(8)",
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 2,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.record",
          "record": Object {
            "cid": "cids(5)",
            "uri": "record(8)",
          },
        },
        "text": "yoohoo",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(7)",
      "viewer": Object {
        "like": "record(10)",
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(1)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 3,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "uri": "record(3)",
      "viewer": Object {
        "like": "record(5)",
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(8)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "hey there",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(11)",
      "viewer": Object {},
    },
  },
]
`;
